# rrtrace

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  mise.toml  renovate.json5  rrprof.gemspec  rrtrace.gemspec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
exe/: rrtrace
ext/rrprof/: extconf.rb  process_manager_posix.h  process_manager_windows.h  rrprof.c  rrprof.h  rrprof_event.h  rrprof_event_ringbuffer.h  shared_memory_posix.h  shared_memory_windows.h
ext/rrtrace/: extconf.rb  process_manager_posix.h  process_manager_windows.h  rrtrace.c  rrtrace.h  rrtrace_event.h  rrtrace_event_ringbuffer.h  rust_build_helper.rb  shared_memory_posix.h  shared_memory_windows.h  time_posix.h  time_windows.h
lib/: rrprof.rb  rrtrace.rb
lib/rrprof/: version.rb
lib/rrtrace/: run.rb  version.rb
sig/: rrprof.rbs  rrtrace.rbs
src/: main.rs  object_scatter.rs  oneshot_channel.rs  renderer.rs  ringbuffer.rs  shader.wgsl  shm.rs  shm_windows.rs  trace_state.rs  universal_notifier.rs  visualizer.rs
src/renderer/: trace_state.rs  vertex_arena.rs
src/renderer/trace_state/: gpu_sync_vec.rs
src/trace_state/: gpu_sync_vec.rs
