[package]
edition = "2024"
name = "rrtrace"
version = "0.1.0"

[profile.release]
overflow-checks = true

[dependencies]
atomic-wait = "1.1.0"
bytemuck = { features = ["derive"], version = "1.25.0" }
crossbeam-queue = "0.3.12"
glam = "0.32.1"
pollster = "0.4.0"
smallvec = "1.15.1"
wgpu = "28.0.0"
winit = "0.30.13"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
], version = "0.61.2" }
